Add a portrait of JEG2. Patch by JEG2.
git-svn-id: http://svn.coderepos.org/share/lang/ruby/ruby-committers@33950 d0d07461-0603-4401-acd4-de1884942a52

--- a/ruby-committers.yml
+++ b/ruby-committers.yml
@@ -253,6 +253,8 @@
       url: 'http://blog.grayproductions.net/'
       lang: en
       feed: 'http://blog.grayproductions.net/index.rss'
+  portraits:
+    - 'http://grayproductions.net/images/james_headshot_square.jpg'
   ruby-books:
     - '9780976694076'
   services:
