Fix mingled site entries.
git-svn-id: http://svn.coderepos.org/share/lang/ruby/ruby-committers@33980 d0d07461-0603-4401-acd4-de1884942a52

--- a/ruby-committers.yml
+++ b/ruby-committers.yml
@@ -656,8 +656,9 @@
     - 立石孝彰
     - Takaaki Tateishi
   sites:
-    - url: 'http://www.trl.ibm.com/people/tate/'
-      title: ttate
+    - title: 'Takaaki Tateishi'
+      url: 'http://www.trl.ibm.com/people/tate/'
+    - title: ttate
       url: 'http://ttsky.net/'
     - title: メモ
       url: 'http://log.ttsky.net/'
