add portrait and set facebook alias
git-svn-id: http://svn.coderepos.org/share/lang/ruby/ruby-committers@38471 d0d07461-0603-4401-acd4-de1884942a52

--- a/ruby-committers.yml
+++ b/ruby-committers.yml
@@ -754,9 +754,11 @@
   services:
     twitter: takano32
     friendfeed: takano32
-    facebook: 1077578262
+    facebook: takano32
     mixi: 1233682
     github: takano32
+  portraits: 
+    - 'http://www.atmarkit.co.jp/news/200909/07/takano.jpg'
 - account: tadf
   name:
     - 舟迫忠佳
