--- a/ruby-committers.yml
+++ b/ruby-committers.yml
@@ -597,13 +597,12 @@
     twitter: nari3
     github: authorNari
 - account: naruse
-  name:
-    - 田中隆裕
   nick:
     - 成瀬ゆい
     - Yui NARUSE
     - naruse
     - nurse
+    - nalsh
   sites:
     - title: nalsh.jp
       url: 'http://nalsh.jp'
