portrait of mame
git-svn-id: http://svn.coderepos.org/share/lang/ruby/ruby-committers@38872 d0d07461-0603-4401-acd4-de1884942a52

--- a/ruby-committers.yml
+++ b/ruby-committers.yml
@@ -490,6 +490,8 @@
       lang: en
   services:
     twitter: mametter
+  portraits:
+    - 'http://dame.dyndns.org/misc/misc/mame2.png'
 - account: marcandre
   name:
     - Marc-André Lafortune
