Added ktsj. Patch by ktsj.
git-svn-id: http://svn.coderepos.org/share/lang/ruby/ruby-committers@38968 d0d07461-0603-4401-acd4-de1884942a52

--- a/ruby-committers.yml
+++ b/ruby-committers.yml
@@ -452,6 +452,20 @@
 - account: ksaito
   name:
     - Kazuo Saito
+- account: ktsj
+  name:
+    - 辻本和樹
+    - Kazuki Tsujimoto
+  sites:
+    - title: '継続にっき'
+      url: 'http://www.callcc.net/diary/'
+      lang: ja
+      feed: 'http://www.callcc.net/diary/index.rdf'
+  portraits:
+    - 'http://www.gravatar.com/avatar/303dd57f37d64288bb4f0336332a8882.png'
+  services:
+    twitter: k_tsj
+    github: k-tsj
 - account: luislavena
   name:
     - Luis Lavena
