--- a/ruby-committers.yml
+++ b/ruby-committers.yml
@@ -515,6 +515,8 @@
     - KOSAKI Motohiro
   nick:
     - kosaki
+    - がちゃぴん先生
+    - The green monster
   sites:
     - title: 革命の日々！
       url: 'http://mkosaki.blog46.fc2.com'
